<resources>
    <string name="app_name">PlanZajec</string>
    <string name="settings_card">Personalize Application</string>
    <string name="main_card">Current Schedule</string>
    <string name="exam_edit_card">Edit Exam Notification</string>
    <string name="exam_add_card">Add Exam Notification</string>
    <string name="note_edit_card">Edit Note</string>
    <string name="note_add_card">Add Note</string>
    <string name="change_schedule_card">Change current schedule</string>
    <string name="exams_card">Exams</string>
    <string name="notes_card">Notes</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="department1">Computing and Telecommunications</string>
    <string name="field_of_study1">ICT</string>

    <string name="notification_title">E-PLAN NOTIFICATION</string>
    <string name="notification_lesson_text">New lesson notification</string>
    <string name="big_text_1_lesson">Your class</string>
    <string name="big_text_2_lesson">starts now</string>

    <string name="red_theme">Red</string>
    <string name="blue_theme">Blue</string>

    <string name="note_toast">Please insert a title and description</string>

    <string name="toast_insert_date_time">Please insert a date and time</string>
    <string name="toast_insert_date_time_title">Please insert a title, date and time</string>
    <string name="toast_insert_title">Please insert a title</string>
    <string name="toast_insert_date">Please insert a date</string>
    <string name="toast_insert_time">Please insert time</string>

    <string name="exam_delete_dialog">Do you want to delete this Exam notification?</string>
    <string name="exam_delete">Exam notification deleted</string>
    <string name="cancel_dialog">Cancel</string>

    <string name="exam_saved">Exam notification saved</string>
    <string name="exam_not_updated">Exam notification can\'t be updated</string>
    <string name="exam_updated">Exam notification updated</string>
    <string name="exam_not_saved">Exam notification not saved</string>
    <string name="exam_all_delete">All exam notifications deleted</string>

    <string name="notes_delete_dialog">Do you want to delete this Note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_saved">Note saved</string>
    <string name="note_cant_update">Note can\'t be updated</string>
    <string name="note_update">Note updated</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="note_all_deleted">All notes deleted</string>

    <string name="lesson_notification_set">Notification is set</string>
    <string name="settings_lang_dialog">Select a language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_daily_college_schedule">Your daily college schedule</string>
    <string name="context_menu_options"><![CDATA[Context & menu options]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_title">Enter title</string>
    <string name="set_date_exam">Set Date</string>
    <string name="get_date_exam">get date</string>
    <string name="set_time_exam">Set Time</string>
    <string name="get_time_exam">get time</string>
    <string name="title">Title</string>
    <string name="pick_schedule"><b>PICK SCHEDULE</b></string>
    <string name="show_schedule_for_supervisor">show schedule for supervisor</string>
    <string name="show_schedule_for_course">show schedule for course</string>
    <string name="show_schedule_for_room">show schedule for room</string>
    <string name="set_notification"><b>SET NOTIFICATION</b></string>
    <string name="set_date_plan">Set Date</string>
    <string name="get_date_plan">get date</string>
    <string name="set_time_plan">Set Time</string>
    <string name="get_time_plan">get time</string>
    <string name="set_notification_button">set notification</string>
    <string name="select_your_plan"><b>SELECT YOUR PLAN</b></string>
    <string name="department">Department</string>
    <string name="field_of_study">Field of study</string>
    <string name="semester">Semester</string>
    <string name="group">Group</string>
    <string name="subgroup">Subgroup</string>
    <string name="add_plan">Add Plan</string>
    <string name="note_date_example">Jan 12, 1952</string>
    <string name="note_title_example">Title</string>
    <string name="note_description_example">Description</string>
    <string name="exam_title_example">Title</string>
    <string name="exam_date_example">Date</string>
    <string name="exam_time_example">Time</string>
    <string name="plan_name_example">Name</string>
    <string name="plan_hour_example">Hour</string>
    <string name="plan_supervisor_example">Supervisor</string>
    <string name="plan_room_example">Room</string>
    <string name="select_an_option">Select an option</string>
    <string name="save">Save</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="tabs_menu">Tabs menu</string>
    <string name="current_schedule">Current schedule</string>
    <string name="change_current_schedule">Change current schedule</string>
    <string name="exams">Exams</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="personalize">Personalize</string>
    <string name="delete_all_notifications">Delete all notifications</string>
    <string name="close">close</string>
    <string name="change_application_language"><b>CHANGE APPLICATION LANGUAGE</b></string>
    <string name="set_language"><b>SET LANGUAGE</b></string>
    <string name="change_application_theme"><b>CHANGE APPLICATION THEME</b></string>
    <string name="set_theme"><b>ENABLE DARK MODE</b></string>
    <string name="set_theme_dark"><b>DISABLE DARK MODE</b></string>
    <string name="enter_your_note">Enter your note</string>
</resources>