<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/tabs_menu">
            <menu>
                <item
                    android:id="@+id/nav_schedule"
                    android:title="@string/current_schedule"
                    android:icon="@drawable/ic_launcher_foreground" />
                <item
                    android:id="@+id/nav_change_schedule"
                    android:title="@string/change_current_schedule"
                    android:icon="@drawable/ic_launcher_foreground" />
                <item
                    android:id="@+id/nav_exams"
                    android:title="@string/exams"
                    android:icon="@drawable/ic_launcher_foreground" />
                <item
                    android:id="@+id/nav_notes"
                    android:title="@string/notes"
                    android:icon="@drawable/ic_launcher_foreground" />
            </menu>
        </item>
    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_personalize"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/personalize" />
        </menu>
    </item>
</menu>