<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="?attr/background"
    app:cardCornerRadius="20dp"
    app:contentPadding="8dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_exam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_view_exam_date"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/exam_title_example"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_exam_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:text="@string/exam_date_example"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_exam_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_exam_title"
            android:layout_toEndOf="@id/text_view_exam_date"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/exam_time_example" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>