<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/backgroundColor"
    tools:context=".ChangeScheduleActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".SettingsActivity">

                <TextView
                    android:id="@+id/text_view_change_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/change_application_language"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="?attr/colorPrimaryDark" />

                <RelativeLayout
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/language_button"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/text_view_change_language_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/set_language"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_view_change_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/change_application_theme"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="?attr/colorPrimaryDark" />

                <RelativeLayout
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/language_button"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/text_view_change_color_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/set_theme"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        android:background="?attr/backgroundColor"
        app:itemTextColor="?android:attr/textColorPrimary"
        app:itemIconTint="?attr/colorPrimary">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>